# minikv

./: Cargo.toml  README.md
minikv-cli/: Cargo.toml
minikv-cli/src/: main.rs
minikv-core/: Cargo.toml
minikv-core/src/: lib.rs
minikv-core/src/storage/: error.rs  mem.rs  mod.rs
minikv-server/: Cargo.toml
minikv-server/src/: config.rs  main.rs  server.rs
minikv-server/src/app/: handler.rs
minikv-server/src/service/: logging.rs  mod.rs  wrapper.rs
