[package]
name = "minikv-server"
version = "0.1.0"
edition = "2024"

[dependencies]
minikv-core = { path = "../minikv-core" }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
futures-util = "0.3"
